refactor: rename "OTHER" category to "NOT_CATEGORIZED"
Renames the "OTHER" category to "NOT_CATEGORIZED" for
better clarity and semantic meaning across the
application. Updates associated descriptions, lists,
and values to reflect the new category name.

This change ensures that the category is more descriptive
of its purpose: to include product catalog data that does
not fall into specific categories.